[gd_scene load_steps=19 format=3 uid="uid://cofa42qq4t54m"]

[ext_resource type="Script" path="res://scripts/fairy.gd" id="1_j78lh"]
[ext_resource type="Texture2D" uid="uid://c5hy6gyr72qq7" path="res://addons/Sprite Pack 2/2 - Fairy/Flying_Forward_Movement (32 x 32).png" id="1_wahcj"]
[ext_resource type="Texture2D" uid="uid://owdsmtq8mp8j" path="res://addons/Sprite Pack 2/2 - Fairy/Hurt (32 x 32).png" id="2_5xh3h"]
[ext_resource type="PackedScene" uid="uid://n4wcpx7avysp" path="res://misc/hitbox.tscn" id="3_klrvn"]
[ext_resource type="Texture2D" uid="uid://cudiaa8gveweg" path="res://addons/Sprite Pack 2/2 - Fairy/Magic_Attack_Release (32 x 32).png" id="5_q5di1"]
[ext_resource type="Texture2D" uid="uid://k4mier4x4m55" path="res://addons/Sprite Pack 2/2 - Fairy/Charging_Magic_Flying (32 x 32).png" id="6_lsbsr"]
[ext_resource type="Texture2D" uid="uid://chaakvmfmny2o" path="res://addons/Mini FX, Items & UI/Effects/Bright_Sparkle (16 x 16).png" id="7_w85go"]
[ext_resource type="AudioStream" uid="uid://b4jrkyqwt3pn5" path="res://addons/Sounds/sparkling.wav" id="8_xapvc"]
[ext_resource type="AudioStream" uid="uid://da83aaxmhk46o" path="res://addons/Sounds/magic-spell.wav" id="9_wbbyf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qusj7"]
size = Vector2(32, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2f50e"]
size = Vector2(18, 7)

[sub_resource type="Animation" id="Animation_n5t8q"]
resource_name = "flying"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_wahcj")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_wwa62"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_wahcj")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_v576b"]
resource_name = "magic"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_q5di1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_magic"
}]
}

[sub_resource type="Animation" id="Animation_760pf"]
resource_name = "hurt"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_5xh3h")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7wskj"]
resource_name = "defeated"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_lsbsr")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_kjg5e"]
resource_name = "sparkledeath"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_w85go")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ycb1m"]
_data = {
"RESET": SubResource("Animation_wwa62"),
"defeated": SubResource("Animation_7wskj"),
"flying": SubResource("Animation_n5t8q"),
"hurt": SubResource("Animation_760pf"),
"magic": SubResource("Animation_v576b"),
"sparkledeath": SubResource("Animation_kjg5e")
}

[node name="Fairy" type="CharacterBody2D" groups=["boss"]]
collision_layer = 132
collision_mask = 3
script = ExtResource("1_j78lh")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -16)
scale = Vector2(2, 2)
texture = ExtResource("1_wahcj")
hframes = 4

[node name="HurtSprite" type="Sprite2D" parent="Sprite"]
visible = false
self_modulate = Color(1, 0.45098, 0.45098, 1)
texture = ExtResource("2_5xh3h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -11)
shape = SubResource("RectangleShape2D_qusj7")

[node name="MagicSpawnPoint" type="Marker2D" parent="."]
position = Vector2(6, -13)

[node name="SparkleSpawnPoint" type="Marker2D" parent="."]
position = Vector2(2, -13)

[node name="PlayerDetector" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(150, 0)
hit_from_inside = true

[node name="WallDetector" type="RayCast2D" parent="."]
position = Vector2(0, -11)
target_position = Vector2(60, 0)
collision_mask = 2
hit_from_inside = true

[node name="Hitbox" parent="." instance=ExtResource("3_klrvn")]
position = Vector2(3, -27)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(1, -0.5)
shape = SubResource("RectangleShape2D_2f50e")
debug_color = Color(0.8, 0.243137, 0.847059, 0.419608)

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ycb1m")
}
autoplay = "flying"

[node name="Sparkling" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_xapvc")

[node name="SpellShoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_wbbyf")
volume_db = -15.0

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
